# PolShare

./: COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  check_md5.c  do_recv.c  do_send.c  do_sendBAK.c  get_connected_ip.c  get_ip_from_file.c  get_ipv4.c  landnd.c  landnd.h  main.c  polshare.h  remove_char.c  replace_space_with_vbar.c
